Changelog
=========

1.4 (unreleased)
----------------

- Register the feed viewlet for IBaseFolder
  [erral]

- Use 'index' instead 'render' for the viewlet class to allow overriding via z3c.jbot.
  [erral]

This version has been tested with Plone 4.0.10, 4.1.6, 4.2.5,
Plone 3 is no longer supported, but should still work.

1.3 (2010-10-27)
----------------

- c.bfeeds depends on fatsyndication. [regebro]

This version tested with Plone 3.3.4, 4.0b3, 4.0.10, 4.1.4 and 4.2b2.

1.2 (2010-06-30)
----------------

- Forced reverse order in the sorting. [regebro]

This version has been tested with Plone 3.3.4 and Plone 4.0b3.


1.1 (2010-06-05)
----------------

- Added credits to Bergen Offentlige Bibliotek. [regebro]

- Plone 4 support. [regebro]

This version has been tested with Plone 3.3.4 and Plone 4.0b3.


1.0 (2010-05-16)
----------------

- Initial release

This version has been tested with Plone 3.3.4.