@@ -1,0 +1,15 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:five="http://namespaces.zope.org/five"
+    xmlns:zcml="http://namespaces.zope.org/zcml"
+    xmlns:browser="http://namespaces.zope.org/browser"
+    i18n_domain="collective.blog.feeds">
+    
+  <adapter
+    for="Products.ATContentTypes.interfaces.IATNewsItem
+         Products.CMFPlone.interfaces.syndication.IFeed"
+    provides="Products.CMFPlone.interfaces.syndication.IFeedItem"
+    factory="collective.blog.feeds.adapters.NewsItemItem"
+    /> 
+    
+</configure>
