@@ -9,9 +9,10 @@ Changelog
 
 - Use 'index' instead 'render' for the viewlet class to allow overriding via z3c.jbot.
   [erral]
+  
+- Now punts to using Plone 4.3's built in syndication under Plone 4.3.
 
-This version has been tested with Plone 4.0.10, 4.1.6, 4.2.5,
-Plone 3 is no longer supported, but should still work.
+Plone 3 is no longer supported, but may still work.
 
 1.3 (2010-10-27)
 ----------------
